## Process this file with automake to create Makefile.in
#
# Copyright (C) 1996-2000 Markus F.X.J. Oberhumer
#

INCLUDES = -I$(top_srcdir)/include
CFLAGS = @CFLAGS@ $(CFLAGS_O) $(CFLAGS_W) $(CFLAGS_W_PEDANTIC)

EXTRA_DIST =

lib_LTLIBRARIES = libucl.la

libucl_la_SOURCES = \
	alloc.c \
	fake16.h \
	getbit.h \
	internal.h \
	io.c \
	n2b_99.c \
	n2b_d.c \
	n2b_ds.c \
	n2b_to.c \
	n2d_99.c \
	n2d_d.c \
	n2d_ds.c \
	n2d_to.c \
	ucl_conf.h \
	ucl_crc.c \
	ucl_dll.c \
	ucl_init.c \
	ucl_mchw.ch \
	ucl_ptr.c \
	ucl_ptr.h \
	ucl_str.c \
	ucl_swd.ch \
	ucl_util.c \
	ucl_util.h
